<resources>
    <string name="app_name">Planito</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="save">Save</string>
    <string name="time_range">%1$s – %2$s</string>
    <string name="duration_hours_and_minutes">(%1$s, %2$s)</string>
    <string name="duration_hours_or_minutes">(%s)</string>
    <string name="end_time">End Time</string>
    <string name="delete">Delete</string>
    <string name="sync">Sync</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="default_description">A reminder from Planito</string>
    <string name="yes">Yes</string>
    <string name="save_changes_to">Save changes to %s?</string>
    <string name="save_task_name">Save %s?</string>
    <string name="no">No</string>
    <string name="calendar_owner">Calendar Owner ID</string>
    <string name="calendar_sync_settings">Calendar Sync Settings</string>
    <string name="name_example_com">name@example.com</string>
    <string name="select_calendar">Select Calendar</string>
    <string name="settings">Settings</string>
    <string name="restore_default">Restore Default</string>
    <string name="default_name">Default</string>
    <string name="sync_to_calendar">Sync to calendar %s?</string>
    <string name="confirm">Confirm</string>
    <string name="new_task">New Task</string>
    <string name="continue_text">continue</string>
    <string name="task_name">Task Name</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="daily">Daily</string>
    <string name="task">task</string>
    <string name="delete_task">Delete %s?</string>
    <string name="edit_task">Edit Task</string>
    <string name="unable_to_save">Unable to save task</string>
    <string name="unable_to_save_message">Task name or days cannot be blank.</string>
    <string name="ok">OK</string>
    <string name="delete_this_task">Delete this task?</string>
    <string name="save_changes_to_task">Save changes to task?</string>
    <string name="save_this_task">Save this task?</string>
    <string name="synced">Synced!</string>
    <string name="synced_message">Please wait a few moments for changes to take effect.</string>

    <plurals name="hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">1 min</item>
        <item quantity="other">%d mins</item>
    </plurals>
</resources>