<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/calendar_sync_settings"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_owner"/>

    <EditText
        android:id="@+id/calendar_owner_field"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_example_com"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_calendar"/>

    <Spinner
        android:layout_marginTop="8dp"
        android:id="@+id/calendar_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/restore_default_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_default"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>